--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>猫咪贪吃蛇</title>
+    <title>Cat Snake Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game-container">
-        <h1>🐱 猫咪贪吃蛇 🐱</h1>
+        <h1>🐱 Cat Snake Game 🐱</h1>
         <div class="score-container">
-            <span>分数: </span>
+            <span>Score: </span>
             <span id="score">0</span>
         </div>
         <canvas id="gameCanvas" width="400" height="400"></canvas>
         <div class="controls">
-            <button id="startBtn">开始游戏</button>
-            <p class="instructions">使用方向键或 WASD 控制猫咪移动</p>
+            <button id="startBtn">Start Game</button>
+            <p class="instructions">Use Arrow Keys or WASD to control the cat</p>
         </div>
     </div>
     <script src="game.js"></script>
